Ticket #1527 (new defect)

Opened 4 months ago

Last modified 4 months ago

media_list_player_play always segfaults

Reported by: littlejohn Assigned to:
Priority: normal Milestone: 0.9.0 bugs
Component: LibVLC Version: master
Severity: normal Keywords:
Cc: pdherbemont Platform(s): all
Difficulty: unknown Work status: Not started

Description

the method libvlc_media_list_player_play does not play under normal circumstances, but fails with SIGSEGV. For more info on how to reproduce the error see: org.videolan.jvlc.internal.MediaListPlayerTest?.mediaListPlayerPlay().

Attachments

hs_err_pid30747.log (73.7 kB) - added by littlejohn on 03/17/08 23:31:31.

Change History

03/17/08 23:31:31 changed by littlejohn

  • attachment hs_err_pid30747.log added.

03/19/08 14:24:38 changed by littlejohn

Changes have been made to avoid segfaults, but now the play() method always returns a libvlc_exception_t stating that there are no more elements to play.