media_list_player: Make sure we do return an item to play. Should close #1527.